--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="d-flex  justify-content-between">
                     <button class="btn btn-primary" onclick="convertArray()">Convert</button>
-                    <button class="btn btn-info " onclick="copyArray()">Copy All Numbers</button>
+                    <button class="btn btn-info " onclick="copyArray()">copy Array</button>
                 </div>
             </div>
             <div class=" p-1  rounded overflow-auto  ">
