--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
     <div class="container p-3 rounded"
         style="box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;">
-        <h1 class="mb-4">Extract Mobile Numbers</h1>
+        <h1 class="mb-4">Convert Text  to Array</h1>
         <div class=" row justify-content-center rounded m-1"
             style="box-shadow: rgba(255, 255, 255, 0.2) 0px 0px 0px 1px inset, rgba(0, 0, 0, 0.9) 0px 0px 0px 1px;">
             <div class="col-lg-9  p-1 rounded mx-2">
